res/style.css
:root {
  --top-height-ratio: 5;
}

body {
  font-family: "Ubuntu", sans-serif;
}

button {
  background-color: lightgray;
  outline: none;
}

a.tag {
  background-color: lightgray;
  outline: none;
}

#top-bar {
  display: block;
  background-color: darkcyan;
  color: white;
  flex-grow: 0;
  flex-basis: 100px;
  padding-top: 5px;
  padding-left: 10px;
  padding-right: 10px;
  flex-shrink: 1;
}

#panel {
  background-color: white;
}

body {
  width: 100%;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
}

.flex-container.nowrap {
  flex-wrap: nowrap;
}

.flex-container.wrap {
  flex-wrap: wrap;
}

.flex-vertical {
  flex-direction: column;
}

.flex-horizontal {
  flex-direction: row;
}

.flex-axis-sec-center {
  align-items: center;
}

.flex1 {
  flex-grow: 1;
}

.flex2 {
  flex-grow: 2;
}

.flex3 {
  flex-grow: 3;
}

.flex4 {
  flex-grow: 4;
}

.large.text {
  font-size: 2em;
}

.small.text {
  font-size: 1em;
}

.very-small.text {
  font-size: 0.9em;
}

.bold.text {
  font-weight: bold;
}

.margin5 {
  margin: 5px;
}

.padding5 {
  padding: 5px;
}

.padding10 {
  padding: 10px;
}

.material-icons.md-12 {
  font-size: 12px;
}
.material-icons.md-18 {
  font-size: 18px;
}
.material-icons.md-20 {
  font-size: 20px;
}
.material-icons.md-22 {
  font-size: 22px;
}
.material-icons.md-24 {
  font-size: 24px;
}
.material-icons.md-36 {
  font-size: 36px;
}
.material-icons.md-48 {
  font-size: 48px;
}

.fs-9 {
  font-size: 9px;
}

.fs-12 {
  font-size: 12px;
}

.fs-14 {
  font-size: 14px;
}

.fs-16 {
  font-size: 16px;
}

.fs-18 {
  font-size: 18px;
}

.fs-20 {
  font-size: 20px;
}

.fs-22 {
  font-size: 22px;
}

.fs-24 {
  font-size: 24px;
}

.fs-28 {
  font-size: 28px;
}

.fs-32 {
  font-size: 32px;
}

.fs-36 {
  font-size: 36px;
}

.fs-48 {
  font-size: 48px;
}

.text.italic {
  font-style: italic;
}

.icon-18 {
  width: 18px;
  height: 18px;
}

div.p-inline {
  display: inline;
}

div.p-inline-block {
  display: inline-block;
}

path.white {
  fill: white;
}

rect.white {
  fill: white;
}

a {
  color: inherit;
  text-decoration: none;
}

div.contact-box {
  padding: 3px;
}

.icon-inverted {
  filter: invert(100%);
}

p.thin {
  margin: 5px 0px;
}

.contacts {
  align-content: space-around;
  flex-wrap: wrap;
}

#left-panel {
  flex-grow: 1;
  flex-basis: 200px;
  flex-shrink: 0;
}

#left-panel > div {
  padding-top: 5px;
  margin: 0px 5px;
}

#right-panel {
  flex-grow: 4;
  flex-shrink: 1;
  flex-basis: 400px;
}

#right-panel > div {
  padding-top: 5px;
  margin: 0px 5px;
}

.blue {
  color: blue;
}

.darkcyan {
  color: darkcyan;
}

.large.tag {
  height: 40px;
  padding: 5px;
  margin: 5px;
}

.small.tag {
  height: 30px;
  padding: 3px;
  margin: 5px;
}

.tag {
  border: 2px darkcyan solid;
  border-radius: 10px;
  margin-left: 4px;
  margin-right: 4px;
}

.tag.long-250 {
  min-width: 250px;
}

.dotted.tag {
  border-style: dotted;
}

@media print {
  .no-print,
  .no-print * {
    display: none !important;
  }
}

@media screen {
  .print-only,
  .print-only * {
    display: none !important;
  }
}

hr {
  color: darkcyan;
}

.break-long-line {
  word-wrap: break-word;
}

li {
  white-space: normal;
  margin-top: 0px;
  margin-bottom: 0px;
}

ul {
  margin-top: 5px;
  margin-bottom: 0px;
}

li {
  font-size: 14px;
}

li > span.fs-14 {
  font-size: 12px;
}

.fit-width {
  width: 100%;
}

#contacts-container {
  display: grid;
  grid-template-columns: auto;
}

@media print {
  #contacts-container {
    grid-template-columns: auto auto;
  }
}

#panel {
  padding-top: 0px;
  padding-bottom: 0px;
}

.fs-24.title {
  font-size: 22px;
}

@media (min-width: 600px) {
  #contacts-container {
    grid-template-columns: auto auto;
  }
}

.contacts > .flex1 > p {
  margin-top: 5px;
  margin-bottom: 5px;
}

.tag + .popup-modal {
  display: block;
  visibility: hidden;
  opacity: 0;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  background-color: white;
  background-color: rgba(0, 0, 0, 0.4);
  transition: opacity 500ms;
}

/* .tag + .popup-modal > .popup {
  display: none;
} */

a.tag.large {
  line-height: 150%;
}

a.tag {
  box-sizing: border-box;
  padding: 3px;
  color: black;
}

button.tag {
  background-color: lightgray;
  color: black;
}

.popup-modal:target {
  display: block;
  visibility: visible;
  opacity: 1;
}

.popup-modal > .popup {
  display: block;
  background-color: white;
  margin-top: 15%;
  margin-bottom: 15%;
  padding: 20px;
  margin-left: 10%;
  margin-right: 10%;
  width: 80%;
  box-sizing: border-box;
  border-radius: 10px;
}

.popup-modal > .popup > .popup-content {
  overflow: auto;
}

.close-btn {
  background-color: white;
  border: none;
  outline: none;
}

.flex-space-between {
  justify-content: space-between;
}

